                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.3

  *) [TS-995] Name change for IP support (ink_inet.h).

Changes with Apache Traffic Server 3.1.2

  *) [TS-841] support TLS NextProtocol negotiation

  *) [TS-1110] logstats incorrectly bucketizes all status codes greater 
  than 599 as 5xx. Author: Manjesh Nilange

  *) [TS-1094] Fixed MIME parser so certain sequences of requests on
   keep alive conections no longer wedge it.

  *) [TS-1084] Add compile-time format string checking.

  *) [TS-1101] traffic_line -x no longer works, at least not in
   reasonable time.

  *) [TS-1098] Make RC script support Amazon EC2 Linux AMI.

  *) [TS-1035] EventProcessor::spawn_thread doesn't check that there
   is enough event threads and segfaults.

  *) [TS-1096] readline support for traffic_shell.

  *) [TS-1097] online help for traffic_shell.

  *) [TS-1066] TSHttpTxnServerReqHdrBytesGet in InkAPI.cc has an extra
   parameter (int *bytes) from the prototype in <ts/ts.h>.
   Author: Alistair Stevenson

  *) [TS-1089] Added TSHttpConnectTransparent.

  *) [TS-1088] Added TSHttpTxnOutgoingTransparencySet to API to
   control outbound transparency.

  *) [TS-1083] Initial SSL next protocol negotiation support.

  *) [TS-1082] Obey existing optimizer CXXFLAGS and CFLAGS at configure time.

  *) [TS-1077] All proxy ports are now configured by
   proxy.config.http.server_ports. All other port configuration values
   are deprecated.

  *) [TS-1091] CFLAGS=-w` causes configure script to wrongly guess style of
   `gethostbyname_r` on BSD flavors. Author: Marc Abramowitz.

  *) [TS-1073] no_dns_just_forward_to_parent configuration parameter is
   ignored/not used. Author: Kevin Giles.

  *) [TS-996] HTTPHdr::m_host goes stale if HdrHeap::evacuate_from_str_heaps
   is called. Author: B. Wyatt.

  *) [TS-1041] Populate sockaddr length. Author: James Peach.
