@@ -710,9 +710,6 @@ LogAccess::marshal_record(char *record, char *buf)
   ink_debug_assert(num_chars <= max_chars);
   memcpy(buf, out_buf, num_chars);
 
-#if TS_HAS_PURIFY
-  memset(buf + num_chars + 1, '$', max_chars - num_chars - 1);
-#endif
 
   return max_chars;
 }
