@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.1.3
 
+  *) [TS-1117] Remove TS_HAS_PURIFY MACRO
+
+  *) [TS-937] EThread::execute still processing cancelled event
+
   *) [TS-995] Name change for IP support (ink_inet.h).
 
 Changes with Apache Traffic Server 3.1.2
